--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get_it: ^7.2.0
   go_router: ^13.2.0
   google_fonts: ^6.2.1
+  shimmer: ^3.0.0
+  shimmer_pro: ^0.0.6
   url_launcher: ^6.1.7
 
 dev_dependencies:
