all screen done

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,11 @@
     <action android:name="android.intent.action.VIEW" />
     <data android:scheme="https" />
   </intent>
+  <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="http" />
+  </intent>
 
-  
 </queries>
    <application
         android:label="bookly"
