--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
@@ -41,7 +42,7 @@ dependencies:
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
   shimmer_pro: ^0.0.6
-  url_launcher: ^6.1.7
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
