--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   get_it: ^7.2.0
   go_router: ^13.2.0
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
+  jwt_decoder: ^2.0.1
+  shared_preferences: ^2.3.2
   shimmer: ^3.0.0
   shimmer_pro: ^0.0.6
   url_launcher: ^6.3.0
